--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	</head>
 	<body>
 		<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-        <model-viewer src="resources/assets/spaceship.glb" camera-controls poster="poster.webp" shadow-intensity="1"> </model-viewer>
+        <model-viewer disable-pan disable-tap auto-rotate rotation-per-second="6deg" src="resources/assets/spaceship.glb" camera-controls poster="resources/assets/poster.webp" shadow-intensity="1" interaction-prompt=none> </model-viewer>
 	</body>
 </html>
