--- a/animation.html
+++ b/animation.html
@@ -9,12 +9,12 @@
         <section class="model-container">
             <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
             <model-viewer class="model" id="spaceship" background-color="transparent" camera-controls disable-pan disable-tap disable-zoom camera-orbit="45deg 70deg 100%" interpolation-decay="100" min-camera-orbit="-Infinity 0deg 0%" max-camera-orbit="Infinity 180deg 1000%" src="resources/assets/spaceship.glb" poster="resources/assets/poster.webp" shadow-intensity="1" interaction-prompt="none"> </model-viewer>
-            <script src="./resources/scripts/spaceshipanimation.js"></script>
+            <script src="resources/scripts/spaceshipanimation.js"></script>
         </section>
 		
         <div class="progress-container">
             <div class="progress-bar" id="myBar"></div>
-            <script src="./resources/scripts/progressbar.js"></script>
+            <script src="resources/scripts/progressbar.js"></script>
         </div>
 
 
